fix deprecations and other warings