@@ -4,7 +4,6 @@ import java.util.Collections;
 import java.util.List;
 import java.util.Map;
 import java.util.Objects;
-import java.util.stream.Collectors;
 
 import mpern.sap.commerce.ccv2.model.useconfig.Extensions;
 import mpern.sap.commerce.ccv2.model.useconfig.Languages;
@@ -30,6 +29,7 @@ public class UseConfig {
         this.languages = languages;
     }
 
+    @SuppressWarnings("unchecked")
     public static UseConfig fromMap(Map<String, Object> input) {
         if (input == null) {
             return NO_VALUE;
@@ -38,8 +38,7 @@ public class UseConfig {
         List<Properties> properties = Collections.emptyList();
         List<Map<String, Object>> rawProps = (List<Map<String, Object>>) input.get("properties");
         if (rawProps != null) {
-            properties = rawProps.stream().map(Properties::fromMap).filter(Objects::nonNull)
-                    .collect(Collectors.toList());
+            properties = rawProps.stream().map(Properties::fromMap).filter(Objects::nonNull).toList();
         }
         Solr solr = Solr.fromMap((Map<String, Object>) input.get("solr"));
         Languages languages = Languages.fromMap((Map<String, Object>) input.get("languages"));
